--- a/Cargo.toml
+++ b/Cargo.toml
@@ -24,6 +24,10 @@ name = "p705"
 path = "src/p705.rs"
 
 [[bin]]
+name = "p918"
+path = "src/p918.rs"
+
+[[bin]]
 name = "p1641"
 path = "src/p1641.rs"
 
