--- a/Cargo.toml
+++ b/Cargo.toml
@@ -56,5 +56,9 @@ name = "p3142"
 path = "src/p3142.rs"
 
 [[bin]]
+name = "p3144"
+path = "src/p3144.rs"
+
+[[bin]]
 name = "p3153"
 path = "src/p3153.rs"
