feat: Add solution for LeetCode problem 1450: Number of Students Doing Homework at a Given Time

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,10 @@ name = "p918"
 path = "src/p918.rs"
 
 [[bin]]
+name = "p1450"
+path = "src/p1450.rs"
+
+[[bin]]
 name = "p1641"
 path = "src/p1641.rs"
 
