--- a/Cargo.toml
+++ b/Cargo.toml
@@ -56,6 +56,10 @@ name = "p2540"
 path = "src/p2540.rs"
 
 [[bin]]
+name = "p2708"
+path = "src/p2708.rs"
+
+[[bin]]
 name = "p2549"
 path = "src/p2549.rs"
 
