feat: Add new binary: p880.rs

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,10 @@ name = "p709"
 path = "src/p709.rs"
 
 [[bin]]
+name = "p880"
+path = "src/p880.rs"
+
+[[bin]]
 name = "p918"
 path = "src/p918.rs"
 
