--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,6 +36,10 @@ name = "p918"
 path = "src/p918.rs"
 
 [[bin]]
+name = "p977"
+path = "src/p977.rs"
+
+[[bin]]
 name = "p1388"
 path = "src/p1388.rs"
 
