Add new binary: p2181.rs and update Cargo.toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -64,6 +64,10 @@ name = "p2148"
 path = "src/p2148.rs"
 
 [[bin]]
+name = "p2181"
+path = "src/p2181.rs"
+
+[[bin]]
 name = "p2540"
 path = "src/p2540.rs"
 
