--- a/Cargo.toml
+++ b/Cargo.toml
@@ -76,6 +76,10 @@ name = "p2549"
 path = "src/p2549.rs"
 
 [[bin]]
+name = "p2552"
+path = "src/p2552.rs"
+
+[[bin]]
 name = "p2708"
 path = "src/p2708.rs"
 
