--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,6 +31,10 @@ name = "p2181"
 path = "src/p2181.rs"
 
 [[bin]]
+name = "p2266"
+path = "src/p2266.rs"
+
+[[bin]]
 name = "p232"
 path = "src/p232.rs"
 
