--- a/Cargo.toml
+++ b/Cargo.toml
@@ -15,6 +15,10 @@ name = "p149"
 path = "src/p149.rs"
 
 [[bin]]
+name = "p1561"
+path = "src/p1561.rs"
+
+[[bin]]
 name = "p1641"
 path = "src/p1641.rs"
 
