Add new binary: p1557.rs and update Cargo.toml

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -19,6 +19,10 @@ name = "p149"
 path = "src/p149.rs"
 
 [[bin]]
+name = "p1557"
+path = "src/p1557.rs"
+
+[[bin]]
 name = "p1561"
 path = "src/p1561.rs"
 
