--- a/Cargo.toml
+++ b/Cargo.toml
@@ -135,6 +135,10 @@ name = "p3192"
 path = "src/p3192.rs"
 
 [[bin]]
+name = "p416"
+path = "src/p416.rs"
+
+[[bin]]
 name = "p441"
 path = "src/p441.rs"
 
