--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
   "[python]": {
     "editor.defaultFormatter": "charliermarsh.ruff",
+    "editor.detectIndentation": false,
     "editor.insertSpaces": true,
     "editor.tabSize": 2
   },
