--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,9 @@ version = "0.2.0"
 description = "Leetcode solutions"
 readme = "README.md"
 requires-python = ">=3.11"
-dependencies = []
+dependencies = [
+    "sortedcontainers>=2.4.0",
+]
 
 [tool.ruff]
 indent-width = 2
