Add binary for module updates and reorganize structure
Move solution files to dedicated directory and add automated script to
generate lib.rs module declarations. Also add treefmt-nix for consistent
code formatting across the project.

--- a/leetcode.toml
+++ b/leetcode.toml
@@ -9,7 +9,17 @@ comment_leading = "//"
 test = true
 pick = "${slug}"
 inject_before = ["#[allow(unused)]", "struct Solution;", "", "#[allow(unused)]"]
-inject_after = ["", "#[cfg(test)]", "mod tests {", "    use super::*;", "", "    #[test]", "    fn test_solution() { }", "}", ""]
+inject_after = [
+  "",
+  "#[cfg(test)]",
+  "mod tests {",
+  "    use super::*;",
+  "",
+  "    #[test]",
+  "    fn test_solution() { }",
+  "}",
+  "",
+]
 
 
 [cookies]
