--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,4 +3,8 @@ name = "leetcode"
 version = "0.1.0"
 edition = "2024"
 
+[[bin]]
+name = "update_modules"
+path = "src/bin/update_modules.rs"
+
 [dependencies]
