Add LeetCode solution for minimum deletions k-special
- Configure leetcode.toml to disable tests and use src/solutions - Add
minimum-deletions-to-make-string-k-special solution - Register new
module in lib.rs

--- a/leetcode.toml
+++ b/leetcode.toml
@@ -6,7 +6,7 @@ start_marker = "@lc code=start"
 end_marker = "@lc code=end"
 comment_problem_desc = true
 comment_leading = "//"
-test = true
+test = false
 pick = "${slug}"
 inject_before = ["#[allow(unused)]", "struct Solution;", "", "#[allow(unused)]"]
 inject_after = [
@@ -29,6 +29,6 @@ site = "leetcode.cn"
 
 [storage]
 root = "~/.leetcode"
-code = "src"
+code = "src/solutions"
 scripts = "scripts"
 cache = "Problems"
