Add solution for LeetCode problem: Triangle (id=120) and update Cargo.toml

--- a/rust/solutions/Cargo.toml
+++ b/rust/solutions/Cargo.toml
@@ -81,5 +81,9 @@ name = "sum_of_k_mirror_numbers"
 path = "sum_of_k_mirror_numbers.rs"
 
 [[test]]
+name = "triangle"
+path = "triangle.rs"
+
+[[test]]
 name = "two_sum"
 path = "two_sum.rs"
