Remove top_travellers test and add valid_triangle_number solution in Rust

--- a/rust/solutions/Cargo.toml
+++ b/rust/solutions/Cargo.toml
@@ -85,13 +85,13 @@ name = "sum_of_k_mirror_numbers"
 path = "sum_of_k_mirror_numbers.rs"
 
 [[test]]
-name = "top_travellers"
-path = "top_travellers.rs"
-
-[[test]]
 name = "triangle"
 path = "triangle.rs"
 
 [[test]]
 name = "two_sum"
 path = "two_sum.rs"
+
+[[test]]
+name = "valid_triangle_number"
+path = "valid_triangle_number.rs"
