--- a/rust/solutions/Cargo.toml
+++ b/rust/solutions/Cargo.toml
@@ -81,6 +81,10 @@ name = "minimum_steps_to_convert_string_with_operations"
 path = "minimum_steps_to_convert_string_with_operations.rs"
 
 [[test]]
+name = "split_array_into_fibonacci_sequence"
+path = "split_array_into_fibonacci_sequence.rs"
+
+[[test]]
 name = "sum_of_k_mirror_numbers"
 path = "sum_of_k_mirror_numbers.rs"
 
