--- a/rust/solutions/Cargo.toml
+++ b/rust/solutions/Cargo.toml
@@ -13,6 +13,10 @@ name = "check_if_any_element_has_prime_frequency"
 path = "check_if_any_element_has_prime_frequency.rs"
 
 [[test]]
+name = "container_with_most_water"
+path = "container_with_most_water.rs"
+
+[[test]]
 name = "count_prime_gap_balanced_subarrays"
 path = "count_prime_gap_balanced_subarrays.rs"
 
