Add solution for problem 417.

--- a/rust/solutions/Cargo.toml
+++ b/rust/solutions/Cargo.toml
@@ -101,6 +101,10 @@ name = "minimum_steps_to_convert_string_with_operations"
 path = "minimum_steps_to_convert_string_with_operations.rs"
 
 [[test]]
+name = "pacific_atlantic_water_flow"
+path = "pacific_atlantic_water_flow.rs"
+
+[[test]]
 name = "split_array_into_fibonacci_sequence"
 path = "split_array_into_fibonacci_sequence.rs"
 
