--- a/rust/solutions/Cargo.toml
+++ b/rust/solutions/Cargo.toml
@@ -121,6 +121,10 @@ name = "sum_of_k_mirror_numbers"
 path = "sum_of_k_mirror_numbers.rs"
 
 [[test]]
+name = "swim_in_rising_water"
+path = "swim_in_rising_water.rs"
+
+[[test]]
 name = "trapping_rain_water_ii"
 path = "trapping_rain_water_ii.rs"
 
