--- a/rust/solutions/Cargo.toml
+++ b/rust/solutions/Cargo.toml
@@ -17,6 +17,10 @@ name = "check_if_any_element_has_prime_frequency"
 path = "check_if_any_element_has_prime_frequency.rs"
 
 [[test]]
+name = "check_if_digits_are_equal_in_string_after_operations_i"
+path = "check_if_digits_are_equal_in_string_after_operations_i.rs"
+
+[[test]]
 name = "compute_alternating_sum"
 path = "compute_alternating_sum.rs"
 
