--- a/rust/solutions/Cargo.toml
+++ b/rust/solutions/Cargo.toml
@@ -13,6 +13,10 @@ name = "build_an_array_with_stack_operations"
 path = "build_an_array_with_stack_operations.rs"
 
 [[test]]
+name = "calculate_money_in_leetcode_bank"
+path = "calculate_money_in_leetcode_bank.rs"
+
+[[test]]
 name = "check_if_any_element_has_prime_frequency"
 path = "check_if_any_element_has_prime_frequency.rs"
 
